<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- AppName -->
    <string name="app_name">Topick</string>

    <!-- URL -->
    <string name="url_facebook_login">http://api.sansan-plus-plus.tk/auth/facebook</string>
    <string name="url_twitter_login">http://api.sansan-plus-plus.tk/auth/twitter</string>
    <string name="url_facebook_pick_up_key_phrase">http://api.sansan-plus-plus.tk/keyphrase/facebook?access_token=</string>
    <string name="url_twitter_pick_up_key_phrase">http://api.sansan-plus-plus.tk/keyphrase/twitter?access_token=</string>
    <string name="url_facebook_search_user">http://api.sansan-plus-plus.tk/search/facebook?access_token=</string>
    <string name="url_twitter_search_user">http://api.sansan-plus-plus.tk/search/twitter?access_token=</string>
    <string name="url_facebook_pick_up_topic">http://api.sansan-plus-plus.tk/topic/facebook?access_token=</string>
    <string name="url_twitter_pick_up_topic">http://api.sansan-plus-plus.tk/topic/twitter?access_token=</string>

    <!-- Preference -->
    <string name="facebook_access_token_set_key">facebook_access_token</string>
    <string name="twitter_access_token_set_key">twitter_access_token</string>
    <string name="twitter_access_token_secret_set_key">twitter_access_token_secret</string>

    <!-- MainActivity -->
    <string name="text_subtitle_facebook">Facebookで検索</string>
    <string name="text_search_name">名前</string>
    <string name="text_kana">かな</string>
    <string name="text_romaji">ローマ字</string>
    <string name="text_kanji">漢字</string>
    <string name="hint_romaji_first_name">First_name</string>
    <string name="hint_romaji_last_name">Last_name</string>
    <string name="hint_kana_first_name">みょうじ</string>
    <string name="hint_kana_last_name">なまえ</string>
    <string name="hint_kanji_first_name">苗字</string>
    <string name="hint_kanji_last_name">名前</string>
    <string name="text_subtitle_twitter">Twitterで検索</string>
    <string name="text_search_twitter">TwitterID</string>
    <string name="hint_twitter">＠</string>
    <string name="btn_launch_camera">カメラで名刺を\n読み込む</string>
    <string name="btn_topic_search">Topickする</string>

    <!-- OCRTask -->
    <string name="dialog_ocr_mes">解析中</string>
    <string name="dialog_pick_up_word_list_title_kana_name">かなの名前を選択してください</string>
    <string name="dialog_pick_up_word_list_title_romaji_name">ローマ字の名前を選択してください</string>
    <string name="dialog_pick_up_word_list_title_kanji_name">漢字の名前を選択してください</string>
    <string name="dialog_pick_up_word_list_title_twitter_id">TwitterIDを選択してください</string>
    <string name="dialog_pick_up_word_list_next_btn">ない場合は次へ</string>
    <string name="dialog_pick_up_word_list_back_btn">戻る</string>
    <string name="dialog_pick_up_word_list_end_btn">選択終了</string>
    <string name="toast_pick_up_failure_msg">読み取りに失敗しました</string>

    <!-- SettingActivity -->
    <string name="btn_launch_manegement_kay_phrase">キーフレーズ管理</string>
    <string name="btn_login_facebook">Facebook</string>
    <string name="btn_login_twitter">Twitter</string>

    <!-- ManagementKeyPhrase -->
    <string name="btn_pick_up_keyphrase">抽出する</string>
    <string name="btn_search_key_phrase">検索</string>
    <string name="hint_search_key_phrase">キーフレーズを検索</string>
    <string name="alert_search_key_phrase">何か入力してください</string>
    <string name="btn_add_key_phrase">追加</string>
    <string name="hint_add_key_phrase">追加するキーフレーズ</string>
    <string name="btn_save_kay_phrase_change">変更を保存</string>

    <!-- AccessDb -->
    <string name="keyphrase_table">keyphrase_table</string>
    <string name="cancel_keyphrase_table">cancel_keyphrase_table</string>
    <string name="create_keyphrase_table_sql">CREATE TABLE keyphrase_table ( id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, phrase TEXT, date TEXT);</string>
    <string name="create_cancel_keyphrase_table_sql">CREATE TABLE cancel_keyphrase_table ( id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, phrase TEXT, date TEXT);</string>
    <string name="found_account_title">見つかったアカウント</string>
    <string name="title_activity_topic_list">TopicListActivity</string>
    <string name="title_activity_found_account_list">FoundAccountListActivity</string>
    <string name="topic">話題</string>
    <string name="text_setting_cancel_keyphrase_on_off">１度キャンセルしたキーフレーズを表示しない</string>
    <string name="text_setting_sns_relation">SNSアカウントを登録</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_management_key_phrase_btn">ManagementKeyPhraseBtn</string>
    <string name="title_activity_select_pick_up_key_phrase">SelectPickUpKeyPhraseActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_show_topic_list">ShowTopicListActivity</string>

</resources>