<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManagementKeyPhraseFragment" 
    >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dip"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
	    <Button android:id="@+id/btn_pick_up_key_phrase"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dip"
	        android:text="@string/btn_pick_up_keyphrase"
	        android:textColor="@color/white"
	        android:background="@drawable/active_btn_background"
	        />
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dip"
	        android:orientation="horizontal"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	        >
	        <EditText android:id="@+id/edit_search_key_phrase"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:hint="@string/hint_search_key_phrase"
	            android:inputType="text"
	            android:lines="1"
	            android:imeOptions="actionDone"
	            />
	        <Button android:id="@+id/btn_search_key_phrase"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/btn_search_key_phrase"
		        android:textColor="@color/white"
		        android:background="@drawable/active_btn_background"
	            />
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dip"
	        android:orientation="horizontal"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	        >
	        <EditText android:id="@+id/edit_add_key_phrase"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:hint="@string/hint_add_key_phrase"
	            android:inputType="text"
	            android:lines="1"
	            android:imeOptions="actionDone"
	            
	            />
	        <Button android:id="@+id/btn_add_key_phrase"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/btn_add_key_phrase"
	            android:textColor="@color/white"
	            android:background="@drawable/active_btn_background"
	            />
	    </LinearLayout>
	    
	    <com.kosenventure.sansan.others.KeyPhraseListView android:id="@+id/keyphrases_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dip"
	        android:orientation="vertical"
	        />
    </LinearLayout>
    
    <Button android:id="@+id/btn_save_key_phrase_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dip"
        android:text="@string/btn_save_kay_phrase_change"
        android:textColor="@color/white"
        android:background="@drawable/active_btn_background"
        />
</FrameLayout>