<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".SettingsFragment" >

    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/set_toptitle_bg"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="設定"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
        <LinearLayout android:id="@+id/btn_back_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/set_topback_btn"
            android:gravity="center"
            android:paddingTop="2dip"
            android:paddingBottom="2dip"
            android:paddingLeft="2dip"
            android:paddingRight="7dip" 
            android:layout_gravity="center|left"
            android:layout_marginLeft="10dip"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:background="@drawable/back_btn"
                />
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="戻る"
                    android:textColor="@color/white"
                    />
        </LinearLayout>
    </FrameLayout>
    
    <Button android:id="@+id/btn_launch_management_kay_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:padding="10dip"
        android:text="@string/btn_launch_manegement_kay_phrase"
        android:textColor="@color/white"
        android:background="@drawable/active_btn_background"
        />
    
    <Button android:id="@+id/btn_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:padding="10dip"
        android:textColor="@color/white"
        android:background="@drawable/active_btn_background"
        android:text="@string/btn_login_facebook"
        />
    
    <Button android:id="@+id/btn_login_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:padding="10dip"
        android:textColor="@color/white"
        android:background="@drawable/active_btn_background"
        android:text="@string/btn_login_twitter"
        />

</LinearLayout>